--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "string-treatment"
-version = "2.0.0"
+version = "2.0.15"
 description = "For cleaning and adjusting words with inconsistency."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -13,3 +13,13 @@ dependencies = [
     "tqdm>=4.67.1",
     "unidecode>=1.4.0",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+]
+
+[build-system]
+requires = ["uv_build>=0.8.17,<0.9.0"]
+build-backend = "uv_build"
+package = true
